@@ -67,7 +67,7 @@ static const uint32_t SHA256_K[64] = {
     0x748F82EE, 0x78A5636F, 0x84C87814, 0x8CC70208, 0x90BEFFFA, 0xA4506CEB, 0xBEF9A3F7, 0xC67178F2,
 };
 
-static void transform(uint32_t state[static 8], const uint32_t data[static 16])
+static void transform(uint32_t state[8], const uint32_t data[16])
 {
     uint32_t W[16];
     uint32_t T[8];
